Create basic SNS Swagger Controller
