# bip-reference-person/src/main/java/gov/va/bip/reference/person/api/provider/AwsResource.java
@@ -5,7 +5,6 @@ import gov.va.bip.reference.person.AwsPersonService;
 import gov.va.bip.reference.person.api.ReferencePersonAwsApi;
 import gov.va.bip.reference.person.api.model.v1.JmsResponse;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.context.annotation.Import;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -25,6 +24,14 @@ public class AwsResource implements ReferencePersonAwsApi, SwaggerResponseMessag
     public ResponseEntity<JmsResponse> sendMessage(@Valid String body) {
 
         ResponseEntity<JmsResponse> jmsId = new ResponseEntity<JmsResponse>(refAwsPersonService.sendMessage(body), HttpStatus.OK);
+
+        return jmsId;
+    }
+
+    @Override
+    public ResponseEntity<JmsResponse> publishMessage(@Valid String body) {
+
+        ResponseEntity<JmsResponse> jmsId = new ResponseEntity<JmsResponse>(refAwsPersonService.publishMessage(body), HttpStatus.OK);
 
         return jmsId;
     }
