# bip-reference-person/src/main/resources/openapi/openapi.yml
@@ -274,6 +274,45 @@ paths:
       security:
         - bearerAuth: []
       deprecated: false
+  ## SQS Message Example
+  "/api/v1/sns/publishMessage":
+    post:
+      tags:
+        - reference-person-aws
+      summary: publish a sns message
+      description: Will publish a message to the subscribed queue
+      operationId: publishMessage
+      requestBody:
+        description: String message
+        required: true
+        content:
+          text/plain:
+            schema:
+              type: string
+              required:
+                - message
+              properties:
+                message:
+                  type: string
+                  description: The message contents
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                '$ref': '#/components/schemas/JmsResponse'
+        '400':
+          '$ref': '#/components/responses/400'
+        '401':
+          '$ref': '#/components/responses/401'
+        '403':
+          '$ref': '#/components/responses/403'
+        '500':
+          '$ref': '#/components/responses/500'
+      security:
+        - bearerAuth: []
+      deprecated: false
   # The token path should not require any changes
   "/api/v1/token":
     post:
